--- a/cleanData.ipynb
+++ b/cleanData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# clean Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +282,7 @@
        "[614 rows x 13 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +534,7 @@
        "[614 rows x 11 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +601,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +827,7 @@
        "[614 rows x 10 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +859,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -882,13 +889,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# filling with mean for numerical columns\n",
+    "# filling with mean for numerical columns \n",
     "loanData['LoanAmount'].fillna(loanData['LoanAmount'].mean(), inplace=True)\n",
     "loanData['Loan_Amount_Term'].fillna(loanData['Loan_Amount_Term'].mean(), inplace=True)\n",
     "loanData.isnull().sum()"
@@ -896,10 +903,423 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Married</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Self_Employed</th>\n",
+       "      <th>ApplicantIncome</th>\n",
+       "      <th>CoapplicantIncome</th>\n",
+       "      <th>LoanAmount</th>\n",
+       "      <th>Loan_Amount_Term</th>\n",
+       "      <th>Loan_Status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>No</td>\n",
+       "      <td>5849</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>146.412162</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4583</td>\n",
+       "      <td>1508.0</td>\n",
+       "      <td>128.000000</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Not Graduate</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2583</td>\n",
+       "      <td>2358.0</td>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>No</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>141.000000</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>609</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2900</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>610</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>3+</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4106</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>611</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>No</td>\n",
+       "      <td>8072</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>253.000000</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>612</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>No</td>\n",
+       "      <td>7583</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>187.000000</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>613</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>4583</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>133.000000</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>614 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Gender Married Dependents     Education Self_Employed  ApplicantIncome  \\\n",
+       "0      Male      No          0      Graduate            No             5849   \n",
+       "1      Male     Yes          1      Graduate            No             4583   \n",
+       "2      Male     Yes          0      Graduate           Yes             3000   \n",
+       "3      Male     Yes          0  Not Graduate            No             2583   \n",
+       "4      Male      No          0      Graduate            No             6000   \n",
+       "..      ...     ...        ...           ...           ...              ...   \n",
+       "609  Female      No          0      Graduate            No             2900   \n",
+       "610    Male     Yes         3+      Graduate            No             4106   \n",
+       "611    Male     Yes          1      Graduate            No             8072   \n",
+       "612    Male     Yes          2      Graduate            No             7583   \n",
+       "613  Female      No          0      Graduate           Yes             4583   \n",
+       "\n",
+       "     CoapplicantIncome  LoanAmount  Loan_Amount_Term Loan_Status  \n",
+       "0                  0.0  146.412162             360.0           Y  \n",
+       "1               1508.0  128.000000             360.0           N  \n",
+       "2                  0.0   66.000000             360.0           Y  \n",
+       "3               2358.0  120.000000             360.0           Y  \n",
+       "4                  0.0  141.000000             360.0           Y  \n",
+       "..                 ...         ...               ...         ...  \n",
+       "609                0.0   71.000000             360.0           Y  \n",
+       "610                0.0   40.000000             180.0           Y  \n",
+       "611              240.0  253.000000             360.0           Y  \n",
+       "612                0.0  187.000000             360.0           Y  \n",
+       "613                0.0  133.000000             360.0           N  \n",
+       "\n",
+       "[614 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#filling most frequent values for categorical columns since it's small number of missing values \n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "# Identifying the columns with missing values\n",
+    "cols_with_missing_values = [col for col in loanData.columns if loanData[col].isnull().any()]\n",
+    "\n",
+    "# Creating the imputer object\n",
+    "imputer = SimpleImputer(strategy='most_frequent')\n",
+    "\n",
+    "# Applying the imputer to the columns with missing values\n",
+    "loanData[cols_with_missing_values] = imputer.fit_transform(loanData[cols_with_missing_values])\n",
+    "\n",
+    "# Displaying the DataFrame to verify that missing values have been filled\n",
+    "loanData\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 614 entries, 0 to 613\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Gender             614 non-null    object \n",
+      " 1   Married            614 non-null    object \n",
+      " 2   Dependents         614 non-null    object \n",
+      " 3   Education          614 non-null    object \n",
+      " 4   Self_Employed      614 non-null    object \n",
+      " 5   ApplicantIncome    614 non-null    int64  \n",
+      " 6   CoapplicantIncome  614 non-null    float64\n",
+      " 7   LoanAmount         614 non-null    float64\n",
+      " 8   Loan_Amount_Term   614 non-null    float64\n",
+      " 9   Loan_Status        614 non-null    object \n",
+      "dtypes: float64(3), int64(1), object(6)\n",
+      "memory usage: 48.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "loanData.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Married</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Self_Employed</th>\n",
+       "      <th>ApplicantIncome</th>\n",
+       "      <th>CoapplicantIncome</th>\n",
+       "      <th>LoanAmount</th>\n",
+       "      <th>Loan_Amount_Term</th>\n",
+       "      <th>Loan_Status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5849</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>146.412162</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4583</td>\n",
+       "      <td>1508.0</td>\n",
+       "      <td>128.000000</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2583</td>\n",
+       "      <td>2358.0</td>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>141.000000</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Gender  Married  Dependents  Education  Self_Employed  ApplicantIncome  \\\n",
+       "0       1        0           0          0              0             5849   \n",
+       "1       1        1           1          0              0             4583   \n",
+       "2       1        1           0          0              1             3000   \n",
+       "3       1        1           0          1              0             2583   \n",
+       "4       1        0           0          0              0             6000   \n",
+       "\n",
+       "   CoapplicantIncome  LoanAmount  Loan_Amount_Term  Loan_Status  \n",
+       "0                0.0  146.412162             360.0            1  \n",
+       "1             1508.0  128.000000             360.0            0  \n",
+       "2                0.0   66.000000             360.0            1  \n",
+       "3             2358.0  120.000000             360.0            1  \n",
+       "4                0.0  141.000000             360.0            1  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Create an instance of LabelEncoder\n",
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "# List of categorical columns to be encoded\n",
+    "categorical_cols = ['Gender', 'Married', 'Dependents','Education','Self_Employed','Loan_Status']  # Replace with your actual column names\n",
+    "\n",
+    "# Apply LabelEncoder to each categorical column\n",
+    "for col in categorical_cols:\n",
+    "    loanData[col] = label_encoder.fit_transform(loanData[col])\n",
+    "\n",
+    "# Display the first few rows of the DataFrame to see the changes\n",
+    "loanData.head()\n"
+   ]
   }
  ],
  "metadata": {
